MODGOBI-232/MODGOBI-233. Skip populating tenantId from Gobi, add posibility to work without locations (#269)
* MODGOBI-232/MODGOBI-233. Skip populating tenantId from Gobi when not nesessary/Add posibility to create GOBI order without configured locations in the system

* MODGOBI-232/MODGOBI-233. Minor readability improvement

* MODGOBI-232/MODGOBI-233. Code review

* MODGOBI-232/MODGOBI-233. Add after each in unit test

* MODGOBI-232/MODGOBI-233. Code review